crates/php-parser/tests/snapshots/integration__stmt_declare.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Declare": {
          "directives": [
            [
              "X",
              {
                "kind": {
                  "String": "Y"
                },
                "span": {
                  "start": 18,
                  "end": 21
                }
              }
            ]
          ],
          "body": null
        }
      },
      "span": {
        "start": 7,
        "end": 25
      }
    },
    {
      "kind": {
        "Declare": {
          "directives": [
            [
              "A",
              {
                "kind": {
                  "String": "B"
                },
                "span": {
                  "start": 36,
                  "end": 39
                }
              }
            ],
            [
              "C",
              {
                "kind": {
                  "String": "D"
                },
                "span": {
                  "start": 43,
                  "end": 46
                }
              }
            ]
          ],
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Echo": [
                      {
                        "kind": {
                          "String": "foo"
                        },
                        "span": {
                          "start": 59,
                          "end": 64
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 54,
                    "end": 66
                  }
                }
              ]
            },
            "span": {
              "start": 48,
              "end": 67
            }
          }
        }
      },
      "span": {
        "start": 25,
        "end": 69
      }
    },
    {
      "kind": {
        "Declare": {
          "directives": [
            [
              "A",
              {
                "kind": {
                  "String": "B"
                },
                "span": {
                  "start": 80,
                  "end": 83
                }
              }
            ],
            [
              "C",
              {
                "kind": {
                  "String": "D"
                },
                "span": {
                  "start": 87,
                  "end": 90
                }
              }
            ]
          ],
          "body": {
            "kind": {
              "Block": []
            },
            "span": {
              "start": 69,
              "end": 104
            }
          }
        }
      },
      "span": {
        "start": 69,
        "end": 104
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 104
  }
}
